CHANGES IN VERSION 3.1.3
------------------------
 o dotplot for gseaResult <2016-11-23, Fri>
   + https://github.com/GuangchuangYu/DOSE/issues/20
 
CHANGES IN VERSION 3.1.2
------------------------
 o in gseaplot, call grid.newpage only if dev.interactive() <2016-11-16, Wed>
 o change minGSSize <  geneSet_size & geneSet_size <  maxGSSize to
   	  minGSSize <= geneSet_size & geneSet_size <= maxGSSize <2016-11-16, Wed>
 o fixed show method issus of unknown setType in clusterProfiler::GSEA output <2016-11-15, Tue>
 o throw more friendly error msg if fail to determine setType automatically in setReadable function <2016-11-15, Tue>
   + https://support.bioconductor.org/p/89445/#89479
 o apply minGSSize and maxGSSize to fgsea <2016-11-14, Mon>
 o change summary to as.data.frame in internal calls to prevent warning message <2016-11-14, Mon>

CHANGES IN VERSION 3.1.1
------------------------
 o update startup message <2016-11-09, Wed>
 o fixed parallel in Windows (not supported) <2016-10-24, Mon>
   + https://github.com/GuangchuangYu/DOSE/issues/16
 o options(DOSE_workers = x) to set using x cores for GSEA analysis is removed. <2016-10-24, Mon>
   instead let MulticoreParam() to decide how many cores (can be set by `options(mc.cores = x)`).

CHANGES IN VERSION 3.0.0
------------------------
 o BioC 3.4 released <2016-10-18, Tue>

CHANGES IN VERSION 2.11.12
------------------------
 o deprecate summary method and use as.data.frame instead <2016-09-29, Thu>

CHANGES IN VERSION 2.11.11
------------------------
 o export geneID and geneInCategory <2016-09-19, Mon>

CHANGES IN VERSION 2.11.10
------------------------
 o geneID and geneInCategory accessor functions <2016-09-19, Mon>

CHANGES IN VERSION 2.11.9
------------------------
 o enrichMap works with result contains only one term <2016-08-15, Wed>
   + https://github.com/GuangchuangYu/DOSE/issues/15
 o build_Anno now works with tibble <2016-08-18, Tue>

CHANGES IN VERSION 2.11.8
------------------------